 local-mem-interface.bsv   Locally Modified          350 
 local-mem-bram.bsv        Locally Modified          350 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/central-cache
 local-mem-central-cache.bsv Locally Modified          350 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/hybrid
 hybrid-mem-scratch.cpp    Locally Modified          350 
 hybrid-mem-scratch.rrr    Locally Modified          350 
 hybrid-mem-scratch.h      Locally Modified          350 
 hybrid-mem-scratch.bsv    Locally Modified          350 
 hybrid-mem-scratch-interfaces.bsv Locally Modified          350 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/local
 scratch-interfaces.bsv    Locally Modified          350 
 local-mem-scratch.bsv     Locally Modified          350 

- Add a new category of scratchpad called "uncached".  See the corresponding
  checkin in hasim for a description.

- Expose the byte-masked write interface in local memory.  That is the native
  hardware support.  The old code exposed only word masks.

----------
mcadler     Date: Fri Mar 12 09:05:36 EST 2010  CSN: CSN-platforms-352
                  Fri Mar 12 14:05:36 UTC 2010


Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/hybrid
 hybrid-mem-scratch.cpp    Locally Modified          351 
 hybrid-mem-scratch.h      Locally Modified          351 

StoreLine() now uses MMX/SSE instructions only when they are available.
The alternate version isn't terrible now that I figured out how to generate
byte masks.

----------
pellauer    Date: Fri Mar 12 11:49:13 EST 2010  CSN: CSN-platforms-353
                  Fri Mar 12 16:49:13 UTC 2010


Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 xilinx.xst                Locally Modified          352 


* Add -iobuf no to HTG .xst script to un-break synthesis boundaries.

Michael P.