@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-353
+CSN=CSN-platforms-354
 Dependencies=hasim/HEAD
